--- a/Hakyll-Foundation.cabal
+++ b/Hakyll-Foundation.cabal
@@ -4,7 +4,7 @@ build-type:         Simple
 cabal-version:      >= 1.10
 
 executable site
-  main-is:          site.hs
+  main-is:          ./src/site.hs
   build-depends:    base == 4.*
                   , hakyll == 4.9.*
                   , filepath >=1.0 && <1.5
