--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "html_public"]
 	path = html_public
-	url = git@github.com:haoyun/Hakyll-Foundation.git
+	url = git@github.com:haoyun/haoyun.github.io.git
