--- a/Hakyll-Foundation.cabal
+++ b/Hakyll-Foundation.cabal
@@ -4,8 +4,10 @@ build-type:         Simple
 cabal-version:      >= 1.10
 
 executable site
-  main-is:          ./src/site.hs
+  main-is:          site.hs
+  Hs-source-dirs:   src
   build-depends:    base == 4.*
                   , hakyll == 4.9.*
+                  , filepath >= 1.0 && < 1.5
   ghc-options:      -threaded
   default-language: Haskell2010
