--- a/site.cabal
+++ b/site.cabal
@@ -8,10 +8,11 @@ executable site
   hs-source-dirs:   src
   build-depends:    base                 == 4.*
                   , hakyll               == 4.12.*
-                  , filepath             >= 1.0    && < 1.5
-                  , blaze-html           >= 0.5    && < 0.10
-                  , process              >= 1.6    && < 1.7
-                  , optparse-applicative >= 0.12   && < 0.15
+                  , pandoc               >= 2.0.5 && <2.3
+                  , filepath             >= 1.0   && < 1.5
+                  , blaze-html           >= 0.5   && < 0.10
+                  , process              >= 1.6   && < 1.7
+                  , optparse-applicative >= 0.12  && < 0.15
   ghc-options:      -threaded
   default-language: Haskell2010
   Other-Modules:    Context
