--- a/Foundation/package.json
+++ b/Foundation/package.json
@@ -15,14 +15,16 @@
   },
   "dependencies": {
     "foundation-sites": "~6.4.0",
-    "jquery": ">=3.0.0",
-    "what-input": "^4.1.3",
-    "motion-ui": "~1.2.2"
+    "jquery": "^3.4.1",
+    "minimatch": "^3.0.4",
+    "motion-ui": "~1.2.2",
+    "node-sass": "^4.12.0",
+    "what-input": "^4.1.3"
   },
   "devDependencies": {
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-load-plugins": "^1.1.0",
+    "gulp-load-plugins": "^1.6.0",
     "gulp-sass": "^2.1.0"
   },
   "repository": {
